Fix pagination bullet spacing

--- a/modules/swiper.scss
+++ b/modules/swiper.scss
@@ -19,6 +19,7 @@
 	display: block;
 	width: 10px;
 	height: 10px;
+	margin: 0 5px;
 	background-color: $disabled;
 	cursor: pointer;
 	border-radius: 50%;
